--- a/centralconf-client/pom.xml
+++ b/centralconf-client/pom.xml
@@ -45,5 +45,10 @@
 			<artifactId>guava</artifactId>
 			 <version>23.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-context</artifactId>
+			<version>1.2.3.RELEASE</version>
+		</dependency>
 	</dependencies>
 </project>
